first commit, subesquently your commit message should be very descriptive. It should describe the feature or task or bug you just fixed or worked on.Give me a thumbs up if you understand. Ok good

--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@
 }
 .common-btn{
     padding: 18px 40px;
-    background: transparent;
+    background: transpaterent;
     outline:  none;
     border: 2px solid #f67c92;
     font-weight: bold;
